spectec/test/elab/neg/ctx-funparam-tparam-duplicate.spectec
;; A function-parameter's type-parameter list carries the same name
;; twice.

dec $f(def $g<T, T> : nat) : nat
